Correct noise treatment

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -23,41 +23,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Simulation functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_spectrum(spectrum, degree=0):\n",
-    "    plt.figure()\n",
-    "    if spectrum.shape[0] == 1:\n",
-    "        plt.plot(angles, np.log10(spectrum[0]))\n",
-    "    else:\n",
-    "        plt.pcolormesh(angles, frequencies, np.log10(spectrum))\n",
-    "    plt.axvline(degree, color='red')\n",
-    "    plt.xlabel('angle [deg]')\n",
-    "    plt.ylabel('frequency [Hz]')\n",
-    "    \n",
-    "def from_0_to_2pi(angle):\n",
-    "    angle = (angle + np.pi) % (2 * np.pi) - np.pi # -pi to pi\n",
-    "    if (type(angle) == float) or (angle.ndim == 0):\n",
-    "        angle = angle + 2 * np.pi if angle < 0 else angle\n",
-    "    else:\n",
-    "        angle[angle < 0] += 2 * np.pi\n",
-    "    return angle\n",
-    "\n",
-    "def from_0_to_360(angle_deg):\n",
-    "    return 180 / np.pi * from_0_to_2pi(angle_deg / 180 * np.pi)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -110,7 +75,29 @@
     "        for i in range(signals.shape[0]):\n",
     "            ax.plot(signals[i])\n",
     "        #ax.set_xlim(0, 100)\n",
-    "    return signals"
+    "    return signals\n",
+    "\n",
+    "def plot_spectrum(spectrum, degree=0):\n",
+    "    plt.figure()\n",
+    "    if spectrum.shape[0] == 1:\n",
+    "        plt.plot(angles, np.log10(spectrum[0]))\n",
+    "        plt.ylabel('spectrum [-]')\n",
+    "    else:\n",
+    "        plt.pcolormesh(angles, frequencies, np.log10(spectrum))\n",
+    "        plt.ylabel('frequency [Hz]')\n",
+    "    plt.axvline(degree, color='red')\n",
+    "    plt.xlabel('angle [deg]')\n",
+    "    \n",
+    "def from_0_to_2pi(angle):\n",
+    "    angle = (angle + np.pi) % (2 * np.pi) - np.pi # -pi to pi\n",
+    "    if (type(angle) == float) or (angle.ndim == 0):\n",
+    "        angle = angle + 2 * np.pi if angle < 0 else angle\n",
+    "    else:\n",
+    "        angle[angle < 0] += 2 * np.pi\n",
+    "    return angle\n",
+    "\n",
+    "def from_0_to_360(angle_deg):\n",
+    "    return 180 / np.pi * from_0_to_2pi(angle_deg / 180 * np.pi)"
    ]
   },
   {
@@ -130,13 +117,12 @@
     "\n",
     "baseline = 0.108  # meters, square side of mic array\n",
     "gt_distance = 10  # meters, distance of source\n",
-    "add_noise_mics_positions = 1e-3  # noise added to mic positions\n",
-    "add_noise_times = 1e-6 # noise added to recording times\n",
+    "gt_angle_deg = 90 # angle of ground truth\n",
     "\n",
     "#mics_drone = get_square_array(baseline=baseline, delta=0) # 4 x 2\n",
     "mics_drone = get_uniform_array(2, baseline=baseline) # 4 x 2\n",
+    "mics_drone -= np.mean(mics_drone, axis=0) # center the drone\n",
     "\n",
-    "gt_angle_deg = 90\n",
     "gt_angle_rad = gt_angle_deg * np.pi / 180.0\n",
     "source = gt_distance * np.array([np.cos(gt_angle_rad), np.sin(gt_angle_rad)])\n",
     "\n",
@@ -147,7 +133,30 @@
     "\n",
     "plt.figure()\n",
     "plt.scatter(*mics_drone.T)\n",
-    "plt.axis('equal')"
+    "plt.axis('equal')\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### parameters\n",
+    "Fs = 32000  # Hz, sampling frequency\n",
+    "n_buffer = 2048\n",
+    "duration = 100  # seconds, should be long enough to account for delays and full movement\n",
+    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
+    "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
+    "degrees = np.array([0, 20, 45], dtype=np.float) # orientations\n",
+    "frequency_desired = 600 # Hz\n",
+    "\n",
+    "signal_noise = 1e-3  # noise added to signals\n",
+    "mics_noise = 1e-3  # noise added to mic positions (rigid)\n",
+    "degree_noise = 5 # noise added to each degree position, in degrees\n",
+    "time_quantization = 6 # number of decimal places to keep\n",
+    "time_noise = 1e-6 # noise added to recording times"
    ]
   },
   {
@@ -163,55 +172,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Fs = 44100  # Hz, sampling frequency\n",
-    "n_buffer = 2048\n",
-    "duration = 100  # seconds, should be long enough to acocunt for delays and full movement\n",
-    "noise = 1e-3 \n",
+    "from audio_stack.beam_former import rotate_mics\n",
+    "\n",
     "np.random.seed(1)\n",
     "\n",
     "frequencies = np.fft.rfftfreq(n_buffer, 1/Fs)\n",
-    "\n",
-    "signal_type = \"mono\"; frequency_desired = 600\n",
     "indices = [np.argmin(np.abs(frequencies - frequency_desired))]\n",
     "frequency_hz = frequencies[indices]\n",
-    "\n",
     "#signal_type = \"random\"; frequency_hz = None; \n",
-    "print('chosen frequency:', frequency_hz)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from audio_stack.beam_former import rotate_mics\n",
-    "\n",
-    "# create one long source signal\n",
-    "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
-    "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
-    "\n",
-    "#degrees = [0, 0]\n",
-    "#degrees = range(10)\n",
-    "#degrees = np.arange(0, 360, 45)\n",
-    "#degrees = [0, 85] #, -40] \n",
-    "degrees = [0, 20, 45]\n",
+    "print('chosen frequency:', frequency_hz)\n",
     "\n",
     "if angular_velocity_deg != 0:\n",
-    "    times_list = [(d-degrees[0])/angular_velocity_deg for d in degrees] # seconds\n",
+    "    times_list = (degrees-degrees[0])/angular_velocity_deg \n",
     "else:\n",
-    "    times_list = [0] * len(degrees)\n",
+    "    times_list = np.zeros(len(degrees))\n",
     "print('recording times in seconds:', times_list)\n",
     "\n",
     "assert duration > max(times_list)\n",
     "\n",
-    "np.random.seed(1)\n",
-    "mics_list = [rotate_mics(mics_drone, orientation_deg=degree) for degree in degrees]\n",
+    "# create noisy versions\n",
+    "mics_drone_noisy = deepcopy(mics_drone)\n",
+    "times_list_noisy = deepcopy(times_list)\n",
+    "degrees_noisy = deepcopy(degrees)\n",
+    "if mics_noise > 0:\n",
+    "    mics_drone_noisy += np.random.normal(scale=mics_noise, size=mics_drone.shape)\n",
+    "if time_noise > 0:\n",
+    "    times_list_noisy += np.random.normal(scale=time_noise, size=times_list.shape)\n",
+    "if time_quantization > 0:\n",
+    "    times_list_noisy = np.round(times_list_noisy, time_quantization)\n",
+    "if degree_noise > 0:\n",
+    "    degrees_noisy += np.random.normal(scale=degree_noise, size=degrees.shape)\n",
+    "\n",
+    "# we think we move to \"degrees\" position but we actually move to degrees_noisy.\n",
+    "mics_list = [rotate_mics(mics_drone_noisy, orientation_deg=degree) for degree in degrees_noisy]\n",
     "\n",
     "plt.figure()\n",
+    "counter = 0\n",
     "for degree, mics in zip(degrees, mics_list):\n",
     "    for j in range(mics.shape[0]):\n",
-    "        plt.scatter(*mics[j], label=f'rot {degree}, mic{j}')\n",
+    "        plt.scatter(*mics[j], label=f'real {degree:.0f}, mic{j}', color=f\"C{counter}\")\n",
+    "        counter += 1\n",
+    "        \n",
+    "counter = 0\n",
+    "mics_clean = [rotate_mics(mics_drone, orientation_deg=degree) for degree in degrees]\n",
+    "for degree, mics in zip(degrees, mics_clean):\n",
+    "    for j in range(mics.shape[0]):\n",
+    "        plt.scatter(*mics[j], label=f'theo {degree:.0f}, mic{j}', color=f\"C{counter}\", marker=\"x\")\n",
+    "        counter += 1\n",
     "plt.axis('equal')\n",
     "plt.legend(bbox_to_anchor=[1, 1], loc='upper left')\n",
     "pass"
@@ -234,11 +241,11 @@
    "source": [
     "from signals import generate_signal, amplify_signal\n",
     "source_signal = generate_signal(Fs, \n",
-    "                                signal_type=signal_type, \n",
+    "                                signal_type=\"mono\", \n",
     "                                duration_sec=duration, \n",
     "                                frequency_hz=frequency_hz, \n",
-    "                                noise=noise)\n",
-    "source_signal = amplify_signal(source_signal, target_dB=-10)\n",
+    "                                noise=signal_noise)\n",
+    "source_signal = amplify_signal(source_signal, target_dB=0)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "for mic in mics_drone:\n",
@@ -258,6 +265,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# generate signals"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -268,21 +282,15 @@
     "signals_list = []\n",
     "\n",
     "for mics, time in zip(mics_list, times_list):\n",
-    "    \n",
     "    fig, ax = plt.subplots()\n",
-    "    signals_received =  generate_signals(mics, time, noise=noise, ax=ax) \n",
-    "    #signals_received = generate_signals_pyroom(source_signal, mics.T, time, noise=noise, ax=ax)\n",
+    "    signals_received =  generate_signals(mics, time, noise=signal_noise, ax=ax) \n",
+    "    #signals_received = generate_signals_pyroom(source_signal, mics.T, time, noise=signal_noise, ax=ax)\n",
     "    ax.set_xlim(800, 1400)\n",
     "    ax.legend([f\"mic{i}\" for i in range(mics.shape[0])])\n",
     "    ax.set_title(f'signals at time {time:.3f}')\n",
     "    \n",
     "    signals_list.append(signals_received)\n",
-    "buffers = [signals_this[:, time_index:time_index + n_buffer] for signals_this in signals_list] \n",
-    "\n",
-    "if add_noise_mics_positions > 0:\n",
-    "    mics_drone += np.random.normal(scale=add_noise_mics_positions, size=mics_drone.shape)\n",
-    "if add_noise_times > 0:\n",
-    "    times_list = [t + np.random.normal(scale=add_noise_times) for t in times_list]"
+    "buffers = [signals_this[:, time_index:time_index + n_buffer] for signals_this in signals_list] "
    ]
   },
   {
@@ -299,8 +307,8 @@
    "outputs": [],
    "source": [
     "mics_array = np.concatenate([*mics_list])\n",
-    "signals_multimic = generate_signals(mics_array, time=0, noise=noise)\n",
-    "#signals_multimic = generate_signals_pyroom(source_signal, mics_array.T, time=0, noise=noise)\n",
+    "signals_multimic = generate_signals(mics_array, time=0, noise=signal_noise)\n",
+    "#signals_multimic = generate_signals_pyroom(source_signal, mics_array.T, time=0, noise=signal_noise)\n",
     "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
     "\n",
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
@@ -320,7 +328,7 @@
    "source": [
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
     "counter = 0\n",
-    "for j, (degree, buffer, time) in enumerate(zip(degrees, buffers, times_list)):\n",
+    "for j, (degree, buffer, time) in enumerate(zip(degrees, buffers, times_list_noisy)):\n",
     "    for i in range(buffer.shape[0]): # n_mics\n",
     "        phase_shift = from_0_to_2pi(- 2 * np.pi * time * frequency_hz) * 180 / np.pi\n",
     "        time_shift = phase_shift / (360 * frequency_hz)\n",
@@ -357,13 +365,15 @@
    "source": [
     "from audio_stack.beam_former import BeamFormer\n",
     "\n",
-    "beam_former = BeamFormer(mic_positions=mics_array)\n",
+    "mics_array_theoretical = np.concatenate([*mics_clean])\n",
+    "beam_former = BeamFormer(mic_positions=mics_array_theoretical)\n",
+    "print(mics_drone)\n",
     "angles = beam_former.theta_scan * 180 / np.pi\n",
     "\n",
-    "signals_f_multimic = np.fft.rfft(buffer_multimic).T\n",
+    "signals_f_multimic = (np.fft.rfft(buffer_multimic).T)[indices, :]\n",
     "\n",
-    "signals_f_multimic = signals_f_multimic[indices, :]\n",
-    "frequencies = frequencies[indices]\n",
+    "if len(frequencies) > len(indices):\n",
+    "    frequencies = frequencies[indices]\n",
     "\n",
     "R_multimic = beam_former.get_correlation(signals_f_multimic)\n",
     "print(np.angle(R_multimic))\n",
@@ -432,12 +442,11 @@
    "source": [
     "# signals with delay correction\n",
     "\n",
-    "print(mics_drone.shape)\n",
     "beam_former = BeamFormer(mic_positions=mics_drone)\n",
     "beam_former.init_multi_estimate(frequencies)\n",
     "\n",
     "signals_f_list_delayed = []\n",
-    "for i, (sig_f, time) in enumerate(zip(signals_f_list, times_list)):\n",
+    "for i, (sig_f, time) in enumerate(zip(signals_f_list, times_list_noisy)):\n",
     "    exp_factor = np.exp(1j * 2 * np.pi * frequencies * time)\n",
     "    print('phase difference in degrees:', from_0_to_2pi(np.angle(exp_factor))*180/np.pi)\n",
     "    signals_f_delayed = np.multiply(sig_f, exp_factor[:, np.newaxis])  # frequencies x n_mics\n",
@@ -467,7 +476,7 @@
    "source": [
     "from algos_basics import get_mic_delays\n",
     "\n",
-    "beam_former_test = BeamFormer(mic_positions=mics_array)\n",
+    "beam_former_test = BeamFormer(mic_positions=mics_array_theoretical)\n",
     "\n",
     "signals_f_tot_delay = np.empty((len(frequencies), 0))\n",
     "signals_f_tot_zero = np.empty((len(frequencies), 0))\n",
@@ -482,10 +491,12 @@
     "combined_raw_zero = beam_former_test.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
     "\n",
     "Rtot_delay = beam_former_test.get_correlation(signals_f_tot_delay)\n",
-    "print(np.angle(Rtot_delay))\n",
+    "\n",
     "combined_raw_delay = beam_former_test.get_mvdr_spectrum(Rtot_delay, frequencies)\n",
     "\n",
     "combined_raw_delay_bf = beam_former.get_multi_estimate()\n",
+    "\n",
+    "np.testing.assert_allclose(combined_raw_delay_bf, combined_raw_delay)\n",
     "\n",
     "plot_spectrum(combined_raw_delay_bf, degree=gt_angle_deg)\n",
     "plt.title('combined raw with correct delay')\n",
@@ -511,16 +522,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chosen_idx = np.argmin(np.abs(frequencies - frequency_hz))\n",
-    "print(chosen_idx)\n",
-    "plt.figure()\n",
-    "plt.semilogy(angles, combined_spectra[chosen_idx], label='combined spectra')\n",
-    "plt.semilogy(angles, combined_raw_delay[chosen_idx], label='raw delay')\n",
-    "plt.semilogy(angles, combined_raw_zero[chosen_idx], label='raw zero', ls=':')\n",
-    "plt.semilogy(angles, spectrum_multimic[chosen_idx], label='multi-mic', ls=':')\n",
-    "plt.axvline(gt_angle_deg, color='C3', ls=':')\n",
-    "plt.axvline(from_0_to_360(gt_angle_deg - degrees[-1]), color='C0', ls=':')\n",
-    "plt.legend()"
+    "for i, freq in enumerate(frequencies):\n",
+    "    plt.figure()\n",
+    "    plt.semilogy(angles, combined_spectra[i], label='combined spectra')\n",
+    "    plt.semilogy(angles, combined_raw_delay[i], label='raw delay')\n",
+    "    plt.semilogy(angles, combined_raw_zero[i], label='raw zero', ls=':')\n",
+    "    plt.semilogy(angles, spectrum_multimic[i], label='multi-mic', ls=':')\n",
+    "    plt.axvline(gt_angle_deg, color='C3', ls=':')\n",
+    "    plt.axvline(from_0_to_360(gt_angle_deg - degrees[-1]), color='C0', ls=':')\n",
+    "    plt.legend()\n",
+    "    plt.title(f'frequency {freq:.2f}Hz')\n",
+    "    plt.xlabel('angle [deg]')\n",
+    "    plt.ylabel('spectrum [-]')"
    ]
   },
   {
