Move result generation to script

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -28,54 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_signals_pyroom(source_signal, mics_rotated, time, noise=0, ax=None):\n",
-    "    import pyroomacoustics as pra\n",
-    "    room = pra.AnechoicRoom(fs=Fs, dim=2)\n",
-    "    room.add_source(source, signal=source_signal, name=f\"source\")\n",
-    "\n",
-    "    beam_former = pra.Beamformer(mics_rotated, Fs)\n",
-    "    room.add_microphone_array(beam_former)\n",
-    "    room.simulate()\n",
-    "    \n",
-    "    time_idx = int(round(time * Fs))\n",
-    "    print(time, Fs, time_idx)\n",
-    "    print('error:', time_idx / Fs, time, (time_idx / Fs) - time)\n",
-    "    \n",
-    "    signals = deepcopy(room.mic_array.signals)\n",
-    "    if noise > 0:\n",
-    "        signals += np.random.normal(scale=noise, size=signals.shape)\n",
-    "    print('shifted signals by', time_idx, signals.shape)\n",
-    "    \n",
-    "    if ax is not None:\n",
-    "        for i in range(signals.shape[0]):\n",
-    "            ax.plot(signals[i])\n",
-    "        ax.axvline(x=time_idx)\n",
-    "    return signals[:, time_idx:]\n",
-    "\n",
-    "def generate_signals(mics_rotated, time, noise=0, ax=None):\n",
-    "    from algos_beamforming import get_mic_delays\n",
-    "    from constants import SPEED_OF_SOUND\n",
-    "\n",
-    "    n_mics = mics_rotated.shape[0]\n",
-    "    print(mics_rotated.shape)\n",
-    "    print('mic 0:', mics_rotated[0])\n",
-    "    print('mic 1:', mics_rotated[1])\n",
-    "\n",
-    "    delays_relative = get_mic_delays(mics_rotated, gt_angle_rad)\n",
-    "    delays = np.linalg.norm(mics_rotated[0] - source)/SPEED_OF_SOUND + delays_relative\n",
-    "\n",
-    "    times = np.arange(0, duration, step=1/Fs) # n_times\n",
-    "    signals = np.sin(2*np.pi*frequency_hz*(times[None, :] - delays[:, None] - time)) # n_mics x n_times\n",
-    "    signals[times[None, :] < delays[:, None]] = 0.0\n",
-    "\n",
-    "    if noise > 0:\n",
-    "        signals += np.random.normal(scale=noise, size=signals.shape)\n",
-    "\n",
-    "    if ax is not None:\n",
-    "        for i in range(signals.shape[0]):\n",
-    "            ax.plot(signals[i])\n",
-    "        #ax.set_xlim(0, 100)\n",
-    "    return signals\n",
+    "from generate_results import *\n",
     "\n",
     "def plot_spectrum(spectrum, degree=0):\n",
     "    plt.figure()\n",
@@ -86,18 +39,7 @@
     "        plt.pcolormesh(angles, frequencies, np.log10(spectrum))\n",
     "        plt.ylabel('frequency [Hz]')\n",
     "    plt.axvline(degree, color='red')\n",
-    "    plt.xlabel('angle [deg]')\n",
-    "    \n",
-    "def from_0_to_2pi(angle):\n",
-    "    angle = (angle + np.pi) % (2 * np.pi) - np.pi # -pi to pi\n",
-    "    if (type(angle) == float) or (angle.ndim == 0):\n",
-    "        angle = angle + 2 * np.pi if angle < 0 else angle\n",
-    "    else:\n",
-    "        angle[angle < 0] += 2 * np.pi\n",
-    "    return angle\n",
-    "\n",
-    "def from_0_to_360(angle_deg):\n",
-    "    return 180 / np.pi * from_0_to_2pi(angle_deg / 180 * np.pi)"
+    "    plt.xlabel('angle [deg]')"
    ]
   },
   {
@@ -254,12 +196,12 @@
     "ax.axis('equal')\n",
     "    \n",
     "fig, ax = plt.subplots()\n",
-    "generate_signals_pyroom(source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
+    "generate_signals_pyroom(source, source_signal, mics_list[-1].T, time=1.0, noise=0, ax=ax)\n",
     "ax.set_title('pyroom')\n",
     "ax.set_xlim(800, 2000)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "generate_signals(mics_list[-1], time=1.0, noise=0, ax=ax)\n",
+    "generate_signals(source, gt_angle_rad, mics_list[-1], frequency_hz, time=1.0, noise=0, ax=ax)\n",
     "ax.set_title('ours')\n",
     "ax.set_xlim(800, 2000)"
    ]
@@ -283,8 +225,8 @@
     "\n",
     "for mics, time in zip(mics_list, times_list):\n",
     "    fig, ax = plt.subplots()\n",
-    "    signals_received =  generate_signals(mics, time, noise=signal_noise, ax=ax) \n",
-    "    #signals_received = generate_signals_pyroom(source_signal, mics.T, time, noise=signal_noise, ax=ax)\n",
+    "    signals_received =  generate_signals(source, gt_angle_rad, mics, frequency_hz, time, noise=signal_noise, ax=ax) \n",
+    "    #signals_received = generate_signals_pyroom(source, source_signal, mics.T, time, noise=signal_noise, ax=ax)\n",
     "    ax.set_xlim(800, 1400)\n",
     "    ax.legend([f\"mic{i}\" for i in range(mics.shape[0])])\n",
     "    ax.set_title(f'signals at time {time:.3f}')\n",
@@ -307,8 +249,8 @@
    "outputs": [],
    "source": [
     "mics_array = np.concatenate([*mics_list])\n",
-    "signals_multimic = generate_signals(mics_array, time=0, noise=signal_noise)\n",
-    "#signals_multimic = generate_signals_pyroom(source_signal, mics_array.T, time=0, noise=signal_noise)\n",
+    "signals_multimic = generate_signals(source, gt_angle_rad, mics_array, frequency_hz, time=0, noise=signal_noise)\n",
+    "#signals_multimic = generate_signals_pyroom(source, source_signal, mics_array.T, time=0, noise=signal_noise)\n",
     "buffer_multimic = signals_multimic[:, time_index:time_index + n_buffer]\n",
     "\n",
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
@@ -376,7 +318,6 @@
     "    frequencies = frequencies[indices]\n",
     "\n",
     "R_multimic = beam_former.get_correlation(signals_f_multimic)\n",
-    "print(np.angle(R_multimic))\n",
     "spectrum_multimic = beam_former.get_mvdr_spectrum(R_multimic, frequencies)\n",
     "plot_spectrum(spectrum_multimic, degree=gt_angle_deg)"
    ]
