--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -86,9 +86,7 @@
    "outputs": [],
    "source": [
     "### parameters\n",
-    "Fs = 32000  # Hz, sampling frequency\n",
     "n_buffer = 2048\n",
-    "duration = 100  # seconds, should be long enough to account for delays and full movement\n",
     "angular_velocity_deg = 20 # deg/sec, velocity of drone\n",
     "time_index = 1000 # idx where signal is non-zero for all positions, found heuristically\n",
     "degrees = np.array([0, 20, 45], dtype=np.float) # orientations\n",
@@ -118,7 +116,7 @@
     "\n",
     "np.random.seed(1)\n",
     "\n",
-    "frequencies = np.fft.rfftfreq(n_buffer, 1/Fs)\n",
+    "frequencies = np.fft.rfftfreq(n_buffer, 1/FS)\n",
     "indices = [np.argmin(np.abs(frequencies - frequency_desired))]\n",
     "frequency_hz = frequencies[indices]\n",
     "#signal_type = \"random\"; frequency_hz = None; \n",
@@ -130,7 +128,7 @@
     "    times_list = np.zeros(len(degrees))\n",
     "print('recording times in seconds:', times_list)\n",
     "\n",
-    "assert duration > max(times_list)\n",
+    "assert DURATION > max(times_list)\n",
     "\n",
     "# create noisy versions\n",
     "mics_drone_noisy = deepcopy(mics_drone)\n",
@@ -182,9 +180,9 @@
    "outputs": [],
    "source": [
     "from signals import generate_signal, amplify_signal\n",
-    "source_signal = generate_signal(Fs, \n",
+    "source_signal = generate_signal(FS, \n",
     "                                signal_type=\"mono\", \n",
-    "                                duration_sec=duration, \n",
+    "                                duration_sec=DURATION, \n",
     "                                frequency_hz=frequency_hz, \n",
     "                                noise=signal_noise)\n",
     "source_signal = amplify_signal(source_signal, target_dB=0)\n",
@@ -256,7 +254,7 @@
     "fig, axs = plt.subplots(buffer_multimic.shape[0], sharex=True)\n",
     "for i in range(buffer_multimic.shape[0]): # n_mics\n",
     "    label=f\"mic{i}\"\n",
-    "    axs[i].plot(np.arange(buffer_multimic.shape[1])/Fs, buffer_multimic[i], label=label)\n",
+    "    axs[i].plot(np.arange(buffer_multimic.shape[1])/FS, buffer_multimic[i], label=label)\n",
     "    axs[i].set_title(label)\n",
     "    axs[i].set_xlim(0, 0.002)\n",
     "plt.suptitle('multi-mic signals')"
@@ -278,7 +276,7 @@
     "        print(\"phase shift in time\", time_shift)\n",
     "        label = f\"rot {degree} time {time:.3f} mic{i}\"\n",
     "        axs[counter].axvline(time_shift)\n",
-    "        axs[counter].plot(np.arange(buffer.shape[1])/Fs, buffer[i], label=label)\n",
+    "        axs[counter].plot(np.arange(buffer.shape[1])/FS, buffer[i], label=label)\n",
     "        axs[counter].set_title(label)\n",
     "        axs[counter].set_xlim(0, 0.002)\n",
     "        counter += 1\n",
@@ -346,18 +344,19 @@
     "spectra = [beam_former.get_mvdr_spectrum(R, frequencies) for R in Rs]\n",
     "\n",
     "# combine the individual spectra, accounting for the orientation of the drone\n",
-    "combination_method = \"sum\"\n",
-    "normalization_method = \"none\"\n",
-    "#normalization_method = \"sum_to_one\"\n",
-    "#normalization_method = \"zero_to_one\"\n",
-    "#combination_method = \"product\"\n",
+    "COMBINATION_METHOD = \"sum\"\n",
+    "NORMALIZATION_METHOD = \"none\"\n",
+    "#NORMALIZATION_METHOD = \"sum_to_one\"\n",
+    "#NORMALIZATION_METHOD = \"zero_to_one\"\n",
+    "#COMBINATION_METHOD = \"product\"\n",
     "beam_former.init_dynamic_estimate(combination_n=len(degrees), \n",
-    "                                  combination_method=combination_method, \n",
-    "                                  normalization_method=normalization_method)\n",
+    "                                  combination_method=COMBINATION_METHOD, \n",
+    "                                  normalization_method=NORMALIZATION_METHOD)\n",
     "for spectrum, degree in zip(spectra, degrees):\n",
-    "    beam_former.add_to_dynamic_estimates(spectrum, -degree)\n",
+    "    print(degree)\n",
+    "    beam_former.add_to_dynamic_estimates(spectrum, degree)\n",
     "\n",
-    "combined_spectra = beam_former.get_dynamic_estimate()"
+    "spectrum_combined = beam_former.get_dynamic_estimate()"
    ]
   },
   {
@@ -370,7 +369,7 @@
     "    plot_spectrum(spectrum, from_0_to_360(gt_angle_deg - degree))\n",
     "    plt.title(f'rot {degree}')\n",
     "\n",
-    "plot_spectrum(combined_spectra, from_0_to_360(gt_angle_deg - degrees[-1]))\n",
+    "plot_spectrum(spectrum_combined, gt_angle_deg)\n",
     "plt.title(f'combined spectra')\n",
     "pass"
    ]
@@ -429,23 +428,23 @@
     "    signals_f_tot_zero = np.c_[signals_f_tot_zero, sig_f]\n",
     "    \n",
     "Rtot_zero = beam_former_test.get_correlation(signals_f_tot_zero)\n",
-    "combined_raw_zero = beam_former_test.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
+    "spectrum_raw_zero = beam_former_test.get_mvdr_spectrum(Rtot_zero, frequencies)\n",
     "\n",
     "Rtot_delay = beam_former_test.get_correlation(signals_f_tot_delay)\n",
     "\n",
-    "combined_raw_delay = beam_former_test.get_mvdr_spectrum(Rtot_delay, frequencies)\n",
+    "spectrum_raw = beam_former_test.get_mvdr_spectrum(Rtot_delay, frequencies)\n",
     "\n",
-    "combined_raw_delay_bf = beam_former.get_multi_estimate()\n",
+    "spectrum_raw_bf = beam_former.get_multi_estimate()\n",
     "\n",
-    "np.testing.assert_allclose(combined_raw_delay_bf, combined_raw_delay)\n",
+    "np.testing.assert_allclose(spectrum_raw_bf, spectrum_raw)\n",
     "\n",
-    "plot_spectrum(combined_raw_delay_bf, degree=gt_angle_deg)\n",
+    "plot_spectrum(spectrum_raw_bf, degree=gt_angle_deg)\n",
     "plt.title('combined raw with correct delay')\n",
     "\n",
-    "plot_spectrum(combined_raw_delay, degree=gt_angle_deg)\n",
+    "plot_spectrum(spectrum_raw, degree=gt_angle_deg)\n",
     "plt.title('testing: combined raw with correct delay')\n",
     "\n",
-    "plot_spectrum(combined_raw_zero, degree=gt_angle_deg)\n",
+    "plot_spectrum(spectrum_raw_zero, degree=gt_angle_deg)\n",
     "plt.title('testing: combined raw with zero delay')\n",
     "pass"
    ]
@@ -465,13 +464,12 @@
    "source": [
     "for i, freq in enumerate(frequencies):\n",
     "    plt.figure()\n",
-    "    plt.semilogy(angles, combined_spectra[i], label='combined spectra')\n",
-    "    plt.semilogy(angles, combined_raw_delay[i], label='raw delay')\n",
-    "    plt.semilogy(angles, combined_raw_zero[i], label='raw zero', ls=':')\n",
+    "    plt.semilogy(angles, spectrum_combined[i], label='combined')\n",
+    "    plt.semilogy(angles, spectrum_raw[i], label='correct delay')\n",
+    "    plt.semilogy(angles, spectrum_raw_zero[i], label='zero delay', ls=':')\n",
     "    plt.semilogy(angles, spectrum_multimic[i], label='multi-mic', ls=':')\n",
-    "    plt.axvline(gt_angle_deg, color='C3', ls=':')\n",
-    "    plt.axvline(from_0_to_360(gt_angle_deg - degrees[-1]), color='C0', ls=':')\n",
-    "    plt.legend()\n",
+    "    plt.axvline(gt_angle_deg, color='black', ls=':')\n",
+    "    plt.legend(loc='lower right')\n",
     "    plt.title(f'frequency {freq:.2f}Hz')\n",
     "    plt.xlabel('angle [deg]')\n",
     "    plt.ylabel('spectrum [-]')"
@@ -483,6 +481,69 @@
    "source": [
     "# Full pipeline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "#fname = 'first_test.pkl' # linear array\n",
+    "fname = 'square_test.pkl' # square array\n",
+    "df = pd.read_pickle(fname)\n",
+    "freq_i = 0\n",
+    "\n",
+    "label_list = ['spectrum_combined', 'spectrum_raw', 'spectrum_multimic']\n",
+    "\n",
+    "n_degree_noise = len(df.degree_noise.unique())\n",
+    "n_it = len(df.it.unique())\n",
+    "boxplot_mat = np.empty((len(label_list), n_it, n_degree_noise)) # each column will be one boxplot\n",
+    "\n",
+    "for d, (degree_noise, df_degree_noise) in enumerate(df.groupby('degree_noise')):\n",
+    "    fig, axs = plt.subplots(1, len(label_list), sharey=True, sharex=True)\n",
+    "    fig.set_size_inches(10, 3)\n",
+    "    for counter, (__, row) in enumerate(df_degree_noise.iterrows()):\n",
+    "        for l, label in enumerate(label_list):\n",
+    "            if counter <= 3:\n",
+    "                axs[l].semilogy(angles, row[label][freq_i])\n",
+    "                \n",
+    "            unwrap_angles = np.array([angles[np.argmax(row[label][freq_i])], gt_angle_deg]) / 180 * np.pi\n",
+    "            unwrap_angles = np.unwrap(unwrap_angles)\n",
+    "            error = abs(unwrap_angles[1] - unwrap_angles[0])*180/np.pi\n",
+    "            \n",
+    "            boxplot_mat[l, counter, d] = error\n",
+    "        \n",
+    "    for label, ax in zip(label_list, axs):\n",
+    "        ax.axvline(gt_angle_deg, color='black', ls=':')\n",
+    "        ax.set_title(f'degree noise {degree_noise}')\n",
+    "        ax.set_xlabel('angle [deg]')\n",
+    "        ax.set_ylabel('spectrum [-]')\n",
+    "        ax.set_title(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig_box, ax_box = plt.subplots(1, len(label_list), sharex=True, sharey=True)\n",
+    "fig_box.set_size_inches(10, 5)\n",
+    "for l, label in enumerate(label_list):\n",
+    "    ax_box[l].boxplot(boxplot_mat[l], positions=df.degree_noise.unique(), widths=1.0)\n",
+    "    ax_box[l].set_title(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
