Add timestamp reading and publishing

--- a/notebooks/DynamicStudy.ipynb
+++ b/notebooks/DynamicStudy.ipynb
@@ -344,11 +344,11 @@
     "spectra = [beam_former.get_mvdr_spectrum(R, frequencies) for R in Rs]\n",
     "\n",
     "# combine the individual spectra, accounting for the orientation of the drone\n",
-    "COMBINATION_METHOD = \"sum\"\n",
+    "#COMBINATION_METHOD = \"sum\"\n",
     "NORMALIZATION_METHOD = \"none\"\n",
     "#NORMALIZATION_METHOD = \"sum_to_one\"\n",
     "#NORMALIZATION_METHOD = \"zero_to_one\"\n",
-    "#COMBINATION_METHOD = \"product\"\n",
+    "COMBINATION_METHOD = \"product\"\n",
     "beam_former.init_dynamic_estimate(combination_n=len(degrees), \n",
     "                                  combination_method=COMBINATION_METHOD, \n",
     "                                  normalization_method=NORMALIZATION_METHOD)\n",
@@ -501,7 +501,7 @@
     "\n",
     "n_degree_noise = len(df.degree_noise.unique())\n",
     "n_it = len(df.it.unique())\n",
-    "boxplot_mat = np.empty((len(label_list), n_it, n_degree_noise)) # each column will be one boxplot\n",
+    "boxplot_mat = np.empty((len(label_list), n_it, n_degree_noise)) # each slice will be one boxplot\n",
     "\n",
     "for d, (degree_noise, df_degree_noise) in enumerate(df.groupby('degree_noise')):\n",
     "    fig, axs = plt.subplots(1, len(label_list), sharey=True, sharex=True)\n",
