Improve measurements pipeline, make notebooks work again

--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evaluate_data import CSV_DIRNAME, WAV_DIRNAME, RES_DIRNAME, FS, DURATION_SEC\n",
+    "from evaluate_data import EXP_NAME, RES_DIRNAME, FS, DURATION_SEC\n",
     "from evaluate_data import read_df, get_spectrogram, add_soundlevel\n",
     "\n",
     "def custom_save(function=plt.savefig, fname=\"\"):\n",
@@ -57,8 +57,15 @@
     "        fig, ax = plt.subplots()\n",
     "    ax.semilogy(df.timestamp_s, df.sound_level, label=label, marker=\"o\")\n",
     "    ax.set_xlabel('time [s]')\n",
-    "    ax.set_ylabel('sound level')\n",
-    "\n",
+    "    ax.set_ylabel('sound level')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_df_from_wav(fname):\n",
     "    from scipy.signal import stft\n",
     "    from scipy.io import wavfile\n",
@@ -105,10 +112,16 @@
     "#duration = 10 * 1e3 # miliseconds from end\n",
     "duration = DURATION_SEC * 1e3 # miliseconds from end\n",
     "\n",
+    "exp_name = \"2020_09_17_white-noise-static\"\n",
+    "assert exp_name == EXP_NAME, \"watch out, possible discrepancy between evaluate_data.py and here\"\n",
+    "\n",
     "source = \"random_linear\"\n",
-    "df_source, pose_source  = read_df(degree=0, props=False, snr=False, motors=False, source=source)\n",
-    "df_all, pose_all = read_df(degree=0, props=False, snr=False, motors=True, source=source)\n",
-    "df_props, pose_props = read_df(degree=0, props=False, snr=False, motors=True, source=None)\n",
+    "df_source, pose_source  = read_df(exp_name=exp_name,\n",
+    "    degree=0, props=False, snr=False, motors=False, source=source)\n",
+    "df_all, pose_all = read_df(exp_name=exp_name,\n",
+    "    degree=0, props=False, snr=False, motors=True, source=source)\n",
+    "df_props, pose_props = read_df(exp_name=exp_name,\n",
+    "    degree=0, props=False, snr=False, motors=True, source=None)\n",
     "\n",
     "spectrogram_source = get_spectrogram(df_source)\n",
     "spectrogram_all = get_spectrogram(df_all)\n",
@@ -171,15 +184,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fname_source = f'{WAV_DIRNAME}/crazyflie_audio_measurements_nomotors_nosnr_noprops_source_45.wav'\n",
-    "#fname_all =    f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_source_45.wav'\n",
-    "#fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
-    "#thresh = 1e2\n",
-    "\n",
-    "fname_source = f'{WAV_DIRNAME}/nomotors_nosnr_noprops_{source}.wav'\n",
-    "fname_all =    f'{WAV_DIRNAME}/motors_nosnr_noprops_{source}.wav'\n",
-    "fname_props =  f'{WAV_DIRNAME}/motors_nosnr_noprops_None.wav'\n",
-    "thresh = 1e-10\n",
+    "if exp_name == \"2020_09_17_white-noise-static\":\n",
+    "    fname_source = f'../experiments/{exp_name}/export/crazyflie_audio_measurements_nomotors_nosnr_noprops_source_45.wav'\n",
+    "    fname_all =    f'../experiments/{exp_name}/export/crazyflie_audio_measurements_motors_nosnr_noprops_source_45.wav'\n",
+    "    fname_props =  f'../experiments/{exp_name}/export/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
+    "    thresh = 1e2\n",
+    "else:\n",
+    "    fname_source = f'../experiments/{exp_name}/export/nomotors_nosnr_noprops_{source}.wav'\n",
+    "    fname_all =    f'../experiments/{exp_name}/export/motors_nosnr_noprops_{source}.wav'\n",
+    "    fname_props =  f'../experiments/{exp_name}/export/motors_nosnr_noprops_None.wav'\n",
+    "    thresh = 1e-10\n",
+    "print('reading', fname_source)\n",
     "\n",
     "#df_wav_all = read_df_from_wav(fname_all) \n",
     "#df_wav_source = read_df_from_wav(fname_source) \n",
@@ -211,7 +226,7 @@
    "outputs": [],
    "source": [
     "def select_bins(row):\n",
-    "    signals_f = row.signals_f[bins_wav_selected]\n",
+    "    signals_f = row.signals_f[:, bins_wav_selected]\n",
     "    frequencies = row.frequencies[bins_wav_selected]\n",
     "    row.frequencies = frequencies\n",
     "    row.n_frequencies = len(frequencies)\n",
@@ -220,6 +235,7 @@
     "freqs_selected = df_source.iloc[0].loc['frequencies']\n",
     "freqs_wav = df_wav_source.iloc[0].loc['frequencies']\n",
     "bins_wav_selected = [np.argmin(np.abs(freq - freqs_wav)) for freq in freqs_selected]\n",
+    "print('selected bins:', bins_wav_selected)\n",
     "\n",
     "df_wav_selected_all = df_wav_all.apply(select_bins, axis=1)\n",
     "df_wav_selected_source = df_wav_source.apply(select_bins, axis=1)\n",
@@ -259,6 +275,9 @@
     "def filter_df_by_dict(result_df, this_dict, verbose=False):\n",
     "    this_df = result_df.copy()\n",
     "    for key, val in this_dict.items():\n",
+    "        if not key in this_df.columns:\n",
+    "            continue\n",
+    "            \n",
     "        if not len(this_df.loc[this_df[key]==val]):\n",
     "            if verbose:\n",
     "                print(f'did not find any {key}=={val} in results. Available: {this_df[key].unique()}')\n",
@@ -315,7 +334,8 @@
     "    props=False,\n",
     "    snr=False, \n",
     "    degree=0, \n",
-    "    source='random_linear',\n",
+    "    source='mono_linear',\n",
+    "    #source='random_linear',\n",
     "    #source='mono_linear',\n",
     "    # will be set later\n",
     "    method=None,\n",
@@ -591,9 +611,10 @@
     "# should pick uniformly\n",
     "df_nosnr_noprops,_ = read_df(degree=0, props=False, snr=False, motors=True, source=source)\n",
     "\n",
-    "fname_props =  f'{WAV_DIRNAME}/motors_nosnr_noprops_None.wav'\n",
-    "#fname_props =  f'{WAV_DIRNAME}/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
-    "df_props = read_df_from_wav(fname_props)"
+    "if exp_name == '2020_09_17_white-noise-static':\n",
+    "    fname_props =  f'../experiments/{exp_name}/export/crazyflie_audio_measurements_motors_nosnr_noprops_nosource_45.wav'\n",
+    "else:\n",
+    "    fname_props =  f'../experiments/{exp_name}/export/motors_nosnr_noprops_None.wav'"
    ]
   },
   {
@@ -610,7 +631,7 @@
     "    normalized_spec /= np.max(normalized_spec)\n",
     "    ax.scatter(df.iloc[time].frequencies, normalized_spec, label=label)\n",
     "    \n",
-    "normalized_spec = np.abs(df_props.iloc[0].signals_f)\n",
+    "normalized_spec = np.sum(np.abs(df_props.iloc[0].signals_f), axis=0)\n",
     "normalized_spec -= np.min(normalized_spec)\n",
     "normalized_spec /= np.max(normalized_spec)\n",
     "ax.plot(df_props.iloc[0].frequencies, normalized_spec, color=\"C3\", label='measurement mics')\n",
@@ -644,7 +665,7 @@
     "    combine='sum',\n",
     "    normalize='zero_to_one',\n",
     "    #source = 'random_linear',\n",
-    "    source = 'mono_linear',\n",
+    "    source = True,\n",
     "    degree=0, # 20 does not exist\n",
     "    props=False, \n",
     "    snr=False\n",
@@ -659,6 +680,7 @@
     "\n",
     "beam_former = BeamFormer()\n",
     "beam_former.init_dynamic_estimate(combination_n, combination_method, normalization_method)\n",
+    "angles = beam_former.theta_scan\n",
     "\n",
     "combined_heatmap = None\n",
     "raw_heatmap = None\n",
@@ -667,7 +689,7 @@
     "    raw_spectrum = row.spectrum_raw # frequencies x angles\n",
     "    \n",
     "    # TODO(FD): read orientation from current pose estimate.\n",
-    "    beam_former.add_to_dynamic_estimates(raw_spectrum, orientation=0)\n",
+    "    beam_former.add_to_dynamic_estimates(raw_spectrum, orientation_deg=0)\n",
     "    estimate = beam_former.get_dynamic_estimate()\n",
     "    \n",
     "    combined_estimate = combine_rows(estimate, combination_method, keepdims=True)\n",
@@ -729,7 +751,7 @@
     "    method='mvdr',\n",
     "    combine='sum',\n",
     "    normalize='zero_to_one',\n",
-    "    source = 'random_linear',\n",
+    "    source=True, #'random_linear',\n",
     "    degree=None, # 20 does not exist\n",
     "    props=False, \n",
     "    snr=False,\n",
